--- a/pages/index.html
+++ b/pages/index.html
@@ -143,7 +143,7 @@
         </div>
         <div class="card-body">
             <h2 class="card-title"><a class="text-dark" href="https://www.shutingrz.com/pages/about-disclosure-security-information/">セキュリティ情報の公開について</a></h2>
-            <h4 class="card-text">近頃サイバー犯罪による金銭的被害、社会的被害が急増しています。 これらのサイバー犯罪に対抗するため、セキュリティエンジニアは攻撃者が利用するツ</h4>            
+            <h4 class="card-text">近頃サイバー犯罪による金銭的被害、社会的被害が急増しています。 これらのサイバー犯罪に対抗するため、セキュリティエンジニアは攻撃者が利用するツールや脆弱性情報などの最新動向を追う必要があります。 またリスクを明確にするために時には攻撃者目線でセキュリティを考える必要もあります。 このような状況の中、セキュリティエンジニアの助けになればという思いで、実践的なセキュリティ情報を発信していくことにしました。 私</h4>            
         </div>
         <div class="card-footer bg-white">
             <div class="wrapfooter">
@@ -175,7 +175,7 @@
         </div>
         <div class="card-body">
             <h2 class="card-title"><a class="text-dark" href="https://www.shutingrz.com/pages/oreore-coin/">自作仮想通貨入門</a></h2>
-            <h4 class="card-text">自作仮想通貨入門 - 実際に作って学ぶビットコイン 2018年、技術書展5で頒布された合同誌「ITやみなべ」に「オレオレ仮想通貨の作り方」という記</h4>            
+            <h4 class="card-text">自作仮想通貨入門 - 実際に作って学ぶビットコイン 2018年、技術書展5で頒布された合同誌「ITやみなべ」に「オレオレ仮想通貨の作り方」という記事を寄稿しました。 ただ頒布から半年も経ったということで、記事を無償でブログに公開することにしました。 なお合同誌では付録として「chainparams.cpp」に出てくる各変数の意味と歴史的経緯を7ページにわたって記載していますが、これは合同誌を購入いただいた方</h4>            
         </div>
         <div class="card-footer bg-white">
             <div class="wrapfooter">
@@ -207,7 +207,7 @@
         </div>
         <div class="card-body">
             <h2 class="card-title"><a class="text-dark" href="https://www.shutingrz.com/pages/about/">About</a></h2>
-            <h4 class="card-text">しゅーと(@shutingrz) です。ハッカーです。 昔からシステムの構造を調べるのが好きでした。 趣味が高じて今はリバースエンジニアリングやペ</h4>            
+            <h4 class="card-text">しゅーと(@shutingrz) です。ハッカーです。 昔からシステムの構造を調べるのが好きでした。 趣味が高じて今はリバースエンジニアリングやペンテストをしています。 Keywords: ネットワークフォレンジック(IPS/FW/Sandbox) / 脆弱性検証 / Exploiting /DNS /仮想通貨 /IoTセキュリティ / リバースエンジニアリング PGP Fingerprint: 306E71FA574F7618B9CCE6C118F4C438B4CD4B50 Works Presentations Analyze Automotive ECU (Slide) (IoTSecJP version.6.0) DNSトンネリングの手法 (Slide) (ssmjp 2018/05) JC3が教える！ Gozi/DreamBot 判別法 (Slide) (非公開勉強会) KnotR</h4>            
         </div>
         <div class="card-footer bg-white">
             <div class="wrapfooter">
